--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,8 +3,13 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<!DOCTYPE html>
+<html>
+    <head>
+    <link rel="stylesheet" href="~/css/StyleSheet.css" asp-append-version="true" />
+    </head>
+    <body>
+        <div class="text-center"></div>
+    </body>
+</html>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
