Created a cshtml file for the about page of the website. Was able to get the nav bar to work and have the links take me to the corresponding page

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="~/css/StyleSheet.css" asp-append-version="true" />
     </head>
     <body>
-        <div class="text-center"></div>
+        <div class="text-center">
+            <p class="name">WackyMaps</p>
+        </div>
     </body>
 </html>
 
