Worked on the about page

--- a/Pages/Shared/About.cshtml
+++ b/Pages/Shared/About.cshtml
@@ -9,6 +9,21 @@
         <link rel="stylesheet" href="~/css/about.css" asp-append-version="true"/>
     </head>
     <body>
-        <p>Hello World</p>
+        <p>
+            Many people travel internationally as tourists every year. In 2022 alone around 917 million people traveled internationally as tourists. Out of those 917 million people, many of them are illiterate in geography.
+            Geographic illiteracy is the inability to comprehend, understand, and make intelligent decisions at all scales of human settlement patterns.This means that
+            many people will get lost because they can not read a map, determine which way to go, and figure out how to get where they need to be.
+        </p>
+        <p>
+            The target users for my project are people traveling internationally as tourists. Visiting new countries means that there will be places that you are
+            not familiar with. This could result in many people getting lost and not knowing how to get back on track. You are in an unfamiliar country and you may need
+            help getting around.
+           
+        </p>
+        <p>
+            This is where WackyMaps can help. WackyMaps is designed to help people get to where they need to be in the fastest, most efficient way possible. 
+            Simply scan the QR code and get started. The QR code will take you to the corresponding page on the website. The page will have information about the
+            location, pictures of the location, and directions to get to the next location.
+        </p>
     </body>
 </html>
