--- a/wwwroot/css/StyleSheet.css
+++ b/wwwroot/css/StyleSheet.css
@@ -7,4 +7,6 @@
     color: white;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
+    /*margin-top: 50%;
+    margin-bottom: 50%;*/
 }
