Worked on getting the text on the home page centered

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,10 +8,22 @@
     <head>
     <link rel="stylesheet" href="~/css/StyleSheet.css" asp-append-version="true" />
     </head>
-    <body>
-        <div class="text-center">
-            <p class="name">WackyMaps</p>
-        </div>
-    </body>
+    <body1>
+        <p>     </p>
+    </body1>
+    <body2 class="center"> 
+        <center>
+            <table>
+                <tr>
+                    <th>
+                        <p class="name">WackyMaps</p> 
+                    </th>
+                </tr>
+            </table>
+        </center> 
+    </body2>
+    <body3>
+        <p>    </p>
+    </body3>
 </html>
 
