--- a/wwwroot/css/StyleSheet.css
+++ b/wwwroot/css/StyleSheet.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url("https://img1.etsystatic.com/019/0/8505748/il_570xN.497569269_k118.jpg");
+    background-image: linear-gradient(#FF00FF, #FFC0CB, #FF1493);
 }
 .name {
     font-size: 100px;
@@ -7,6 +7,14 @@
     color: white;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
-    /*margin-top: 50%;
-    margin-bottom: 50%;*/
+}
+th {
+    text-align: center;
+    vertical-align: middle;
+}
+body1 {
+    height: 60px;
+}
+body3 {
+    margin-bottom: 50%;
 }
