added a new cshtml page for the lab

--- a/wwwroot/css/StyleSheet.css
+++ b/wwwroot/css/StyleSheet.css
@@ -12,9 +12,9 @@ th {
     text-align: center;
     vertical-align: middle;
 }
-body1 {
+/*body1 {
     height: 60px;
 }
 body3 {
     margin-bottom: 50%;
-}
+}*/
