started working on the page about the lab. added a nav item for the lab page on the layout.cshtml page so that it shows up in the nav bar on the website

--- a/Pages/Shared/lab.cshtml
+++ b/Pages/Shared/lab.cshtml
@@ -5,6 +5,11 @@
 }
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body></body> 
+    <head>
+        <link rel="stylesheet" href="~/css/lab.css" asp-append-version="true" />
+    </head>
+    <body>
+        <h1>Lab</h1>
+        <p>The Lab is one of the classrooms in the basement. It is where all of the </p>
+    </body> 
 </html>
