--- a/Pages/Shared/lab.cshtml
+++ b/Pages/Shared/lab.cshtml
@@ -10,6 +10,9 @@
     </head>
     <body>
         <h1>Lab</h1>
-        <p>The Lab is one of the classrooms in the basement. It is where all of the </p>
+        <p>The Lab is one of the classrooms in the basement. It is where all of the materials needed for the different labs for the different curriculums are done.
+            Part of the lab looks like your typical classroom and the other part has lab benches so that the students can carry out their experiments. In the back
+            of the lab there is a walled off area that is a storage area for other materials needed for general labs and some chemicals that are not kept out in the open. 
+        </p>
     </body> 
 </html>
