created cshtml files for the rest of the rooms. Added corresponding css files. coded for the those pages

--- a/Pages/Shared/auditorium.cshtml
+++ b/Pages/Shared/auditorium.cshtml
@@ -3,3 +3,16 @@
 @{
     ViewData["Title"] = "auditorium";
 }
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="~/css/autidorium.css" asp-append-version="true"/>
+    </head>
+    <body>
+        <h1>Auditorium</h1>
+        <p>The auditorium is one of the rooms in the school that is used the most. It used for programming, both lunch periods, davening, and as access to the 
+            gym. During break and free periods you can often find students hanging out in the auditorium. The auditorium is centrally located in the building. It
+            is big room and it can fit many people inside of it.
+        </p>
+    </body>
+</html>
