--- a/Pages/Shared/stem.cshtml
+++ b/Pages/Shared/stem.cshtml
@@ -3,3 +3,15 @@
 @{
     ViewData["Title"] = "stem";
 }
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="~/css/stem.css" asp-append-version="true"/>
+    </head>
+    <body>
+        <h1>STEM Lab</h1>
+        <p>The STEM Lab is used for STEM classes, robotics, AP physics, and more. Lining the walls are cabinets and drawers that holds the supplies that are
+            used for student projects. The back of the room has two chromebook carts which hold the chromebooks that the students use during class. 
+        </p>
+    </body>
+</html>
