--- a/Pages/Shared/About.cshtml
+++ b/Pages/Shared/About.cshtml
@@ -35,7 +35,7 @@
         </div>
         <div>
             <h3>Flowchart</h3>
-            <img src="~/Images/flow.jpg" asp-append-version="true"/>
+            <img src="@Url.Content("~/Images/flow.jpg")" asp-append-version="true"/>
         </div>
         <div>
             <h3>Electrical Schematic</h3>
