--- a/Pages/Shared/auditorium.cshtml
+++ b/Pages/Shared/auditorium.cshtml
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="~/css/autidorium.css" asp-append-version="true"/>
+        <link rel="stylesheet" href="~/css/auditorium.css" asp-append-version="true"/>
     </head>
     <body>
         <h1>Auditorium</h1>
