put in part of the lists for the directions

--- a/Pages/Shared/gym.cshtml
+++ b/Pages/Shared/gym.cshtml
@@ -9,11 +9,22 @@
         <link rel="stylesheet" href="~/css/gym.css" asp-append-version="true"/>
     </head>
     <body>
-        <h1>Gym</h1>
-        <p>The gym is one of the most used rooms in the school building. It is used for gym classes, sports games, and programs. The gym has three entrances to the outside, but be careful
-            one of them may set off an alarm. It is one of the most common places to find students because of the vending machines that are in there. In the gym
-            there is an office for the gym teachers, lockers for sports games, sports equipment, basketball hoops, and more. The gym is sometimes used by the 
-            preschool for different activities of theirs as well.
-        </p>
+        <div>
+            <h1>Gym</h1>
+            <p>
+                The gym is one of the most used rooms in the school building. It is used for gym classes, sports games, and programs. The gym has three entrances to the outside, but be careful
+                one of them may set off an alarm. It is one of the most common places to find students because of the vending machines that are in there. In the gym
+                there is an office for the gym teachers, lockers for sports games, sports equipment, basketball hoops, and more. The gym is sometimes used by the
+                preschool for different activities of theirs as well.
+            </p>
+        </div>
+        <div>
+            <h3>Directions</h3>
+            <ul>
+                <li>Gym to Lab</li>
+                <li>Gym to Auditorium</li>
+                <li>Gym to STEM</li>
+            </ul>
+        </div>
     </body>
 </html>
