--- a/Pages/Shared/stem.cshtml
+++ b/Pages/Shared/stem.cshtml
@@ -9,9 +9,20 @@
         <link rel="stylesheet" href="~/css/stem.css" asp-append-version="true"/>
     </head>
     <body>
-        <h1>STEM Lab</h1>
-        <p>The STEM Lab is used for STEM classes, robotics, AP physics, and more. Lining the walls are cabinets and drawers that holds the supplies that are
-            used for student projects. The back of the room has two chromebook carts which hold the chromebooks that the students use during class. 
-        </p>
+        <div>
+            <h1>STEM Lab</h1>
+            <p>
+                The STEM Lab is used for STEM classes, robotics, AP physics, and more. Lining the walls are cabinets and drawers that holds the supplies that are
+                used for student projects. The back of the room has two chromebook carts which hold the chromebooks that the students use during class.
+            </p>
+        </div>
+        <div>
+            <h3>Directions</h3>
+            <ul>
+                <li>STEM to Lab</li>
+                <li>STEM to Gym</li>
+                <li>STEM to Auditorium</li>
+            </ul>
+        </div>
     </body>
 </html>
