started the table for directions for the lab page

--- a/Pages/Shared/lab.cshtml
+++ b/Pages/Shared/lab.cshtml
@@ -18,12 +18,18 @@
             </p>
         </div>
        <div> 
-           <h3>Directions</h3>
-           <ul>
-               <li>Lab to Auditorium</li> 
-               <li>Lab to Gym</li> 
-               <li>Lab to STEM</li> 
-           </ul>
+           <table>
+               <tr>
+                   <th>Lab to Gym</th>
+                   <th>Lab to Auditorium</th>
+                   <th>Lab to STEM</th>
+               </tr>
+               <tr>
+                   <td>Go out the back of the gym</td>
+                   <td></td>
+                   <td></td>
+               </tr>
+           </table>
        </div>
     </body> 
 </html>
