continued working on the table

--- a/Pages/Shared/lab.cshtml
+++ b/Pages/Shared/lab.cshtml
@@ -25,7 +25,17 @@
                    <th>Lab to STEM</th>
                </tr>
                <tr>
-                   <td>Go out the back of the gym</td>
+                   <td>Go out the back of the lab</td>
+                   <td>Go out the back of the lab</td>
+                   <td>Go out the front of the lab</td>
+               </tr>
+               <tr>
+                   <td>Turn left and go up the stairs</td>
+                   <td>Turn left and go up the stairs</td>
+                   <td>Go up the stairs</td>
+               </tr>
+               <tr>
+                   <td>At the top of the stairs, turn right</td>
                    <td></td>
                    <td></td>
                </tr>
