finished the table with the directions for the lab page

--- a/Pages/Shared/lab.cshtml
+++ b/Pages/Shared/lab.cshtml
@@ -36,8 +36,43 @@
                </tr>
                <tr>
                    <td>At the top of the stairs, turn right</td>
-                   <td></td>
-                   <td></td>
+                   <td>At the top of the stairs, turn right</td>
+                   <td>Turn left</td>
+               </tr>
+               <tr>
+                   <td>Go until you reach the auditorium</td>
+                   <td>Go until you reach the auditorium</td>
+                   <td>Turn right</td>
+               </tr>
+               <tr>
+                   <td>Go into the auditorium using any of the three doors</td>
+                   <td>Go into the auditorium using any of the three doors</td>
+                   <td>Go through the set of doors</td>
+               </tr>
+               <tr>
+                   <td>Once in the auditorium, walk to the large metal door</td>
+                   <td>You have reached the auditorium</td>
+                   <td>Walk across the library and go through the set of doors on the left</td>
+               </tr>
+               <tr>
+                   <td>Push open the door and go down the stairs</td>
+                   <td class="place">placeholder</td>
+                   <td>Go up the stairs</td>
+               </tr>
+               <tr>
+                   <td>You have reached the gym</td>
+                   <td class="place">placeholder</td>
+                   <td>Turn left</td>
+               </tr>
+               <tr>
+                   <td class="place">placeholder</td>
+                   <td class="place">placeholder</td>
+                   <td>Walk to the end of the hallway</td>
+               </tr>
+               <tr>
+                   <td class="place">placeholder</td>
+                   <td class="place">placeholder</td>
+                   <td>Turn right and go into the stem lab</td>
                </tr>
            </table>
        </div>
