uploaded images and added more directions

--- a/Pages/Shared/gym.cshtml
+++ b/Pages/Shared/gym.cshtml
@@ -20,11 +20,53 @@
         </div>
         <div>
             <h3>Directions</h3>
-            <ul>
-                <li>Gym to Lab</li>
-                <li>Gym to Auditorium</li>
-                <li>Gym to STEM</li>
-            </ul>
+            <table>
+                <tr>
+                    <th>Gym to Lab</th>
+                    <th>Gym to Auditorium</th>
+                    <th>Gym to STEM</th>
+                </tr>
+                <tr>
+                    <td>Go up the stairs</td>
+                    <td>Go up the stairs</td>
+                    <td>Go up the stairs</td>
+                </tr>
+                <tr>
+                    <td>Push open the large metal door</td>
+                    <td>Push open the large metal door</td>
+                    <td>Push open the large metal door</td>
+                </tr>
+                <tr>
+                    <td>Walk across the auditorium and go through any of the three sets of doors</td>
+                    <td>You have reached the auditorium</td>
+                    <td>Walk across the auditorium and go through any of the three sets of doors</td>
+                </tr>
+                <tr>
+                    <td>Turn left and go until you reach the stairs</td>
+                    <td class="holder">placeholder</td>
+                    <td>Go down the bowling alley (slanted hallway)</td>
+                </tr>
+                <tr>
+                    <td>Go down the stairs</td>
+                    <td class="holder">placeholder</td>
+                    <td>Go into the front of the school and go up the stairs</td>
+                </tr>
+                <tr>
+                    <td>Turn left</td>
+                    <td class="holder">placeholder</td>
+                    <td>Turn left</td>
+                </tr>
+                <tr>
+                    <td>Go down the stairs</td>
+                    <td class="holder">placeholder</td>
+                    <td>Walk to the end of the hallway</td>
+                </tr>
+                <tr>
+                    <td>Go into the lab</td>
+                    <td class="holder">placeholder</td>
+                    <td>Turn right and go into the stem lab</td>
+                </tr>
+            </table>
         </div>
     </body>
 </html>
