--- a/wwwroot/css/lab.css
+++ b/wwwroot/css/lab.css
@@ -10,13 +10,13 @@ body {
 td {
     padding: 5px;
 }
-tr {
-    text-align: center;
-}
 table {
     display: flex;
     align-content: center;
 }
 .place {
     color: rgba(255, 182, 193, 0.0);
+}
+h3 {
+    text-align: center;
 }
