--- a/Pages/Shared/lab.cshtml
+++ b/Pages/Shared/lab.cshtml
@@ -18,6 +18,7 @@
             </p>
         </div>
        <div> 
+           <h3>Directions</h3>
            <table>
                <tr>
                    <th>Lab to Gym</th>
