--- a/wwwroot/css/gym.css
+++ b/wwwroot/css/gym.css
@@ -7,3 +7,18 @@ p {
 body {
     background-color: rgba(255, 182, 193, 0.2);
 }
+td {
+    padding: 5px;
+}
+
+table {
+    display: flex;
+    align-content: center;
+}
+
+.holder {
+    color: rgba(255, 182, 193, 0.0);
+}
+h3 {
+    text-align: center;
+}
