put in some more directions tried to get the images to work created html file for the images trying to link it

--- a/Pages/Shared/About.cshtml
+++ b/Pages/Shared/About.cshtml
@@ -32,14 +32,7 @@
                 Simply scan the QR code and get started. The QR code will take you to the corresponding page on the website. The page will have information about the
                 location, pictures of the location, and directions to get to the next location.
             </p>
-        </div>
-        <div>
-            <h3>Flowchart</h3>
-            <img src="@Url.Content("~/Images/flow.jpg")" asp-append-version="true"/> 
-        </div>
-        <div>
-            <h3>Electrical Schematic</h3>
-            <img src="~/Images/electric.jpg" asp-append-version="true"/> 
+           @* <a href="diagrams.html">Diagrams and Stuff</a>*@
         </div>
     </body>
 </html>
