--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="shared/stem">STEM Lab</a>
                         </li> 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="diagrams.html">Diagrams and Stuff</a>
+                        </li>
                     </ul>
                 </div>
             </div>
