--- a/Pages/Shared/auditorium.cshtml
+++ b/Pages/Shared/auditorium.cshtml
@@ -19,11 +19,33 @@
         </div>
         <div>
             <h3>Directions</h3>
-                <ul>
-                    <li>Auditorium to Lab</li>
-                    <li>Auditorium to Gym</li>
-                    <li>Auditorium to STEM</li>
-                </ul>
+               <table>
+                   <tr>
+                       <th>Auditorium to Gym</th>
+                       <th>Auditorium to Lab</th>
+                       <th>Auditorium to STEM</th>
+                   </tr>
+                   <tr>
+                       <td>Go through the large metal door</td>
+                       <td>Go through one of the three sets of doors</td>
+                       <td>Go through one of the three sets of doors</td>
+                   </tr>
+                   <tr>
+                       <td>Go down the stairs</td>
+                       <td>Turn left</td>
+                       <td>Walk down the bowling alley (slanted hallway)</td>
+                   </tr>
+                   <tr>
+                       <td>You have reached the gym</td>
+                       <td>Go until you reach the stairs</td>
+                       <td>Go into the front of the school and go up the stairs</td>
+                   </tr>
+                   <tr>
+                       <td>Placeholder</td>
+                       <td>Go down the stairs</td>
+                       <td>Turn left</td> 
+                   </tr>
+               </table>
         </div>
     </body>
 </html>
