tried working on the images put in the personal bio and cost

--- a/Pages/Shared/About.cshtml
+++ b/Pages/Shared/About.cshtml
@@ -10,6 +10,13 @@
     </head>
     <body>
         <div>
+            <h2>Personal Bio</h2>
+            <p>My name is Nava Hurwitz. I love coding and I love helping people. This project reflects both of those things really well. I have been learning and 
+                teaching myself to code for about four years now and I have loved every second of it. I know many languages and have built many projects with them.
+                I chose to do this project because it has allowed me to use some really cool technologies and do really cool things.
+            </p>
+        </div>
+        <div>
             <h2>Research</h2>
             <p>
                 Many people travel internationally as tourists every year. In 2022 alone around 917 million people traveled internationally as tourists. Out of those 917 million people, many of them are illiterate in geography.
@@ -32,7 +39,13 @@
                 Simply scan the QR code and get started. The QR code will take you to the corresponding page on the website. The page will have information about the
                 location, pictures of the location, and directions to get to the next location.
             </p>
-           @* <a href="diagrams.html">Diagrams and Stuff</a>*@
+        </div>
+        <div>
+            <h2>Cost</h2>
+            <p>The cost is going to be $45</p>
+        </div>
+        <div>
+        @*<img src="c:\users\navah\source\repos\wackymaps\images\flow.jpg" />*@
         </div>
     </body>
 </html>
