all of the tables with directions are finished started styling the location pages

--- a/Pages/Shared/auditorium.cshtml
+++ b/Pages/Shared/auditorium.cshtml
@@ -41,9 +41,24 @@
                        <td>Go into the front of the school and go up the stairs</td>
                    </tr>
                    <tr>
-                       <td>Placeholder</td>
+                       <td class="hold">Placeholder</td>
                        <td>Go down the stairs</td>
                        <td>Turn left</td> 
+                   </tr>
+                   <tr>
+                       <td class="hold">Placeholder</td>
+                       <td>Turn left</td>
+                       <td>Turn left</td>
+                   </tr>
+                   <tr>
+                       <td class="hold">Placeholder</td>
+                       <td>Turn right and go down the stairs</td>
+                       <td>Walk to the end of the hallway</td>
+                   </tr>
+                   <tr>
+                       <td class="hold">Placeholder</td>
+                       <td>Go through the door and into the lab</td>
+                       <td>Turn right and go into the stem lab</td>
                    </tr>
                </table>
         </div>
