--- a/Pages/Shared/stem.cshtml
+++ b/Pages/Shared/stem.cshtml
@@ -18,11 +18,68 @@
         </div>
         <div>
             <h3>Directions</h3>
-            <ul>
-                <li>STEM to Lab</li>
-                <li>STEM to Gym</li>
-                <li>STEM to Auditorium</li>
-            </ul>
+            <table>
+                <tr>
+                    <th>STEM to Auditorium</th>
+                    <th>STEM to Lab</th>
+                    <th>STEM to Gym</th>
+                </tr>
+                <tr>
+                    <td>Turn left</td>
+                    <td>Turn left</td>
+                    <td>Turn left</td>
+                </tr>
+                <tr>
+                    <td>Walk until you reach the stairs</td>
+                    <td>Walk until you reach the stairs</td>
+                    <td>Walk until you reach the stairs</td>
+                </tr>
+                <tr>
+                    <td>Go down the stairs</td>
+                    <td>Go down the stairs</td>
+                    <td>Go down the stairs</td>
+                </tr>
+                <tr>
+                    <td>From the front of the school go up the bowing alley (slanted hallway)</td>
+                    <td>From the front of the school go up the bowing alley (slanted hallway)</td>
+                    <td>From the front of the school go up the bowing alley (slanted hallway)</td>
+                </tr>
+                <tr>
+                    <td>Go through one of the three sets of doors into the auditorium</td>
+                    <td>Turn right</td>
+                    <td>Go through one of the three sets of doors into the auditorium</td>
+                </tr>
+                <tr>
+                    <td class="circle">placeholder</td>
+                    <td>Go until you reach the stairs</td>
+                    <td>Go through the large metal door</td>
+                </tr>
+                <tr>
+                    <td class="circle">placeholder</td>
+                    <td>Go down the stairs</td>
+                    <td>Go down the stairs into the gym</td>
+                </tr>
+                <tr>
+                    <td class="circle">placeholder</td>
+                    <td>Turn left</td>
+                    <td class="circle">placeholder</td>
+                </tr>
+                <tr>
+                    <td class="circle">placeholder</td>
+                    <td>Go until the stairs</td>
+                    <td class="circle">placeholder</td>
+                </tr>
+                <tr>
+                    <td class="circle">placeholder</td>
+                    <td>Go down the stairs</td>
+                    <td class="circle">placeholder</td>
+                </tr>
+                <tr>
+                    <td class="circle">placeholder</td>
+                    <td>Go through the door and into the lab</td>
+                    <td class="circle">plcaeholder</td>
+                </tr>
+            </table>
         </div>
     </body>
 </html>
