worked on the tables and centering them

--- a/Pages/Shared/About.cshtml
+++ b/Pages/Shared/About.cshtml
@@ -10,8 +10,13 @@
     </head>
     <body>
         <div>
+            <h2>Images</h2>
+            <a href="https://nhurwitz75.github.io/WackyMapsImages/" target="_blank">WackyMapsImages</a>
+        </div>
+        <div>
             <h2>Personal Bio</h2>
-            <p>My name is Nava Hurwitz. I love coding and I love helping people. This project reflects both of those things really well. I have been learning and 
+            <p>My name is Nava Hurwitz. I am fourth generation Bostonian and have lived their for the first six years of my life. I moved to New York when I was six years old. I have three siblings, 
+                two brothers and one sister. I love coding and I love helping people. This project reflects both of those things really well. I have been learning and 
                 teaching myself to code for about four years now and I have loved every second of it. I know many languages and have built many projects with them.
                 I chose to do this project because it has allowed me to use some really cool technologies and do really cool things.
             </p>
@@ -35,7 +40,7 @@
         <div>
             <h2>Purpose and Functionality</h2>
             <p>
-                This is where WackyMaps can help. WackyMaps is designed to help people get to where they need to be in the fastest, most efficient way possible.
+                WackyMaps is designed to help people get to where they need to be in the fastest, most efficient way possible.
                 Simply scan the QR code and get started. The QR code will take you to the corresponding page on the website. The page will have information about the
                 location, pictures of the location, and directions to get to the next location.
             </p>
