--- a/Pages/Shared/auditorium.cshtml
+++ b/Pages/Shared/auditorium.cshtml
@@ -17,9 +17,11 @@
                 is big room and it can fit many people inside of it.
             </p>
         </div>
-        <div>
-            <h3>Directions</h3>
+        <div class="tab">
                <table>
+                   <tr>
+                       <th class="header" colspan="3">Directions</th>
+                   </tr>
                    <tr>
                        <th>Auditorium to Gym</th>
                        <th>Auditorium to Lab</th>
