--- a/Pages/Shared/gym.cshtml
+++ b/Pages/Shared/gym.cshtml
@@ -18,9 +18,11 @@
                 preschool for different activities of theirs as well.
             </p>
         </div>
-        <div>
-            <h3>Directions</h3>
+        <div class="grid">
             <table>
+                <tr>
+                    <th class="header" colspan="3">Directions</th>
+                </tr>
                 <tr>
                     <th>Gym to Lab</th>
                     <th>Gym to Auditorium</th>
