--- a/Pages/Shared/lab.cshtml
+++ b/Pages/Shared/lab.cshtml
@@ -17,9 +17,11 @@
                 of the lab there is a walled off area that is a storage area for other materials needed for general labs and some chemicals that are not kept out in the open.
             </p>
         </div>
-       <div> 
-           <h3>Directions</h3>
+       <div class="center"> 
            <table>
+               <tr>
+                   <th class="header" colspan="3">Directions</th>
+               </tr>
                <tr>
                    <th>Lab to Gym</th>
                    <th>Lab to Auditorium</th>
