--- a/Pages/Shared/stem.cshtml
+++ b/Pages/Shared/stem.cshtml
@@ -16,9 +16,11 @@
                 used for student projects. The back of the room has two chromebook carts which hold the chromebooks that the students use during class.
             </p>
         </div>
-        <div>
-            <h3>Directions</h3>
+        <div class="tabl">
             <table>
+                <tr>
+                    <th class="header" colspan="3">Directions</th>
+                </tr>
                 <tr>
                     <th>STEM to Auditorium</th>
                     <th>STEM to Lab</th>
