--- a/wwwroot/css/stem.css
+++ b/wwwroot/css/stem.css
@@ -10,13 +10,15 @@ body {
 .circle {
     color: rgba(255, 182, 193, 0.0);
 }
-table {
-    display: flex;
-    align-content: center;
+.tabl {
+    text-align: center;
 }
 td {
     padding: 5px;
 }
 h3 {
     text-align: center;
+}
+.header {
+    font-size: 25px;
 }
