took out the main headers from each of the tables. wrote a sentence about directions on each page in the description paragraphs

--- a/Pages/Shared/stem.cshtml
+++ b/Pages/Shared/stem.cshtml
@@ -13,14 +13,12 @@
             <h1>STEM Lab</h1>
             <p>
                 The STEM Lab is used for STEM classes, robotics, AP physics, and more. Lining the walls are cabinets and drawers that holds the supplies that are
-                used for student projects. The back of the room has two chromebook carts which hold the chromebooks that the students use during class.
+                used for student projects. The back of the room has two chromebook carts which hold the chromebooks that the students use during class. Below you 
+                will find directions from this location to each of the others.
             </p>
         </div>
         <div class="tabl">
             <table>
-                <tr>
-                    <th class="header" colspan="3">Directions</th>
-                </tr>
                 <tr>
                     <th>STEM to Auditorium</th>
                     <th>STEM to Lab</th>
