--- a/Pages/Shared/auditorium.cshtml
+++ b/Pages/Shared/auditorium.cshtml
@@ -14,14 +14,11 @@
             <p>
                 The auditorium is one of the rooms in the school that is used the most. It used for programming, both lunch periods, davening, and as access to the
                 gym. During break and free periods you can often find students hanging out in the auditorium. The auditorium is centrally located in the building. It
-                is big room and it can fit many people inside of it.
+                is big room and it can fit many people inside of it. Below you will find directions from this location to each of the others.
             </p>
         </div>
         <div class="tab">
                <table>
-                   <tr>
-                       <th class="header" colspan="3">Directions</th>
-                   </tr>
                    <tr>
                        <th>Auditorium to Gym</th>
                        <th>Auditorium to Lab</th>
