--- a/Pages/Shared/gym.cshtml
+++ b/Pages/Shared/gym.cshtml
@@ -15,14 +15,11 @@
                 The gym is one of the most used rooms in the school building. It is used for gym classes, sports games, and programs. The gym has three entrances to the outside, but be careful
                 one of them may set off an alarm. It is one of the most common places to find students because of the vending machines that are in there. In the gym
                 there is an office for the gym teachers, lockers for sports games, sports equipment, basketball hoops, and more. The gym is sometimes used by the
-                preschool for different activities of theirs as well.
+                preschool for different activities of theirs as well. Below you will find directions from this location to each of the others.
             </p>
         </div>
         <div class="grid">
             <table>
-                <tr>
-                    <th class="header" colspan="3">Directions</th>
-                </tr>
                 <tr>
                     <th>Gym to Lab</th>
                     <th>Gym to Auditorium</th>
