--- a/Pages/Shared/lab.cshtml
+++ b/Pages/Shared/lab.cshtml
@@ -14,14 +14,12 @@
             <p>
                 The Lab is one of the classrooms in the basement. It is where all of the materials needed for the different labs for the different curriculums are done.
                 Part of the lab looks like your typical classroom and the other part has lab benches so that the students can carry out their experiments. In the back
-                of the lab there is a walled off area that is a storage area for other materials needed for general labs and some chemicals that are not kept out in the open.
+                of the lab there is a walled off area that is a storage area for other materials needed for general labs and some chemicals that are not kept out in the open. Below you 
+                will find directions from this location to each of the others.
             </p>
         </div>
        <div class="center"> 
            <table>
-               <tr>
-                   <th class="header" colspan="3">Directions</th>
-               </tr>
                <tr>
                    <th>Lab to Gym</th>
                    <th>Lab to Auditorium</th>
